# yami-market-server

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  commitlint.config.js  config.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py
app/extensions/: jwt.py
app/models/: address_model.py  category_model.py  credit_card_model.py  order_model.py  product_model.py  save_later_model.py  shopping_cart_model.py  user.py  user_model.py
app/routers/: address.py  auth.py  category.py  credit_card.py  errors.py  index.py  login.py  order.py  order_detail.py  product.py  save_for_later.py  shopping_cart.py  signup.py  special_product.py  user_profile.py
app/services/: address_service.py  category_service.py  credit_card_service.py  order_service.py  product_service.py  save_later_service.py  shopping_cart_service.py  special_product_service.py  user.py  user_service.py
app/utils/: id.py  logger.py  response_message.py
db/: __init__.py
model/: todos.pgerd  todos.sql
resource/: fake_product_data.csv  fake_product_data_with_image.csv  model.dbm  product_data.csv
resource/data/: fake_product_data_with_image.csv
resource/images/Furniture/: Bookcases.txt  Chairs.txt  Furnishings.txt  Tables.txt
resource/images/Office Supplies/: Appliances.txt  Art.txt  Binders.txt  Envelopes.txt  Fasteners.txt  Labels.txt  Paper.txt  Storage.txt  Supplies.txt
resource/images/Technology/: Accessories.txt  Copiers.txt  Machines.txt  Phones.txt
resource/model/: model.dbm
resource/sql/: handle_stage.sql  insert_stage.sql
resource/sql/sample/: category_sample.sql  shoppingcart_sample.sql  sql_sample.sql
resource/sql/stage/: handle_stage.sql  insert_stage.sql
resource/sql/view/: category_view.sql
scripts/: fake_product_data.ipynb  image_scraper.js  product_data_image.ipynb
scripts/scraper/: image.ts  logger.ts  package-lock.json  package.json  tsconfig.json
src/: app.py
src/db/: connection.py
src/routers/: shopping_cart.py
src/routers/v1/: shopping_cart.py
